--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,19 @@
   .p-1 {
     padding: 1px;
   }
+
+  /* inicio de clases del curso */
+
+  .row {
+    display: flex;
+  }
+
+  .col {
+    flex-grow: 1;
+    margin-right: 10px;
+  }
+
+  input {
+    display: block;
+    margin: 5px;
+  }
