--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -1,4 +1,16 @@
-<!-- <p>main-page works!</p> -->
-
 <h1>Dragon Ball Z</h1>
 <hr>
+
+<div class="row">
+    <div class="col">
+        <app-personajes>
+        </app-personajes>
+    </div>
+
+    <div class="col">
+        <app-agregar 
+            [nuevo]="nuevo" 
+            ></app-agregar>
+
+    </div>
+</div>
